AngularWhiteBoard/WhiteBoard.Web/App/drugform/css/customTheme.css
* {
    /*-webkit-box-shadow: none !important;
    -ms-box-shadow: none !important;
    box-shadow: none !important;
    filter: progid:DXImageTransform.Microsoft.gradient(enabled = false) !important;
    -webkit-text-shadow: none !important;
    -ms-text-shadow: none !important;
    text-shadow: none !important;
    font-family: "Segoe UI", Arial, Helvetica, sans-serif;*/
    font-family:"Open Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
    -webkit-font-smoothing: antialiased;
    /*font-weight: 400;*/
}



.input-group {
    position: initial;
    display: inline;
    border-collapse: separate;
}

.default-label {
    vertical-align: middle;
    padding-right: 5px;
    -webkit-font-smoothing: antialiased;
     font-size: 14px !important;
    font-family: "Segoe UI", Arial, Helvetica, sans-serif;
    font-weight: 700;
    background: none;
    color: #666 !important;
}

.default-label-lg {
    vertical-align: middle;
    padding-right: 5px;
    -webkit-font-smoothing: antialiased;
     font-size: 18px !important;
    font-family: "Segoe UI", Arial, Helvetica, sans-serif;
    font-weight: 900;
    background: none;
    color: #666 !important;
}

.default-label-md {
    vertical-align: middle;
    padding-right: 5px;
    -webkit-font-smoothing: antialiased;
     font-size: 12px !important;
    font-family: "Segoe UI", Arial, Helvetica, sans-serif;
    font-weight: 900;
    background: none;
    color: #666 !important;
}

.default-label-sm {
    vertical-align: middle;
    padding-right: 5px;
    -webkit-font-smoothing: antialiased;
     font-size: 8px !important;
    font-family: "Segoe UI", Arial, Helvetica, sans-serif;
    font-weight: 900;
    background: none;
    color: #666 !important;
}
.btn, .badge, .modal, .modal-dialog, .modal-content,
input, select {

    -ms-border-radius: 0 !important;
    border-radius: 0 !important;
}

/*input, select {
    padding: 4px !important;
    width: 65% !important;
    display: inline-block !important;
}*/

.calendar-weekCount{
    padding: 4px !important;
    width:  50px !important;
    display: inline-block !important;
    text-align: right !important;
    height: 34px;
    vertical-align: middle;
    
}

.input-measure {
    padding: 4px !important;
    width:  50px !important;
    display: inline-block !important;
    text-align: right !important;
}
.select-mass{
    padding: 4px !important;
    width:  115px !important;
    display: inline-block !important;
    text-align: left !important;
}

.select-volume{
    padding: 4px !important;
    width:  115px !important;
    display: inline-block !important;
    text-align: left !important;
}




.input-displayOrder {
    padding: 4px !important;
    width: 30px !important;
    display: inline-block !important;
    text-align: right !important;
     
}

.mass-select {
    padding: 4px !important;
    width: 60px !important;
    display: inline-block !important;
}

.volume-select {
    padding: 4px !important;
    width: 50px !important;
    display: inline-block !important;
}

/*textarea,*/
input,  select {
    padding: 4px !important;
    width: 80% !important;
    display: inline-block !important;
}


.navbar * {
    background-image: none !important;
    -webkit-text-shadow: none !important;
    -ms-text-shadow: none !important;
    text-shadow: none !important;
}

form * {
    font-family: "Segoe UI", Arial, Helvetica, sans-serif;
}

input {
    background-image: none !important;
    border: 1px solid #ccc !important;
    font-family: "Segoe UI", Arial, Helvetica, sans-serif;
}

.textarea {
    background-image: none !important;
    border: 1px solid #ccc !important;
    font-family: "Segoe UI", Arial, Helvetica, sans-serif;
    font-size: 13px !important;
    width:100% !important;
    padding: 0;
    
}

.textarea-disabled {
    background: white
    border: 1px solid #ccc !important;
    font-family: "Segoe UI", Arial, Helvetica, sans-serif;
    font-size: 13px !important;
    width:100% !important;
    padding: 0;
    
}

select {
    font-size: 13px !important;
    font-family: "Segoe UI", Arial, Helvetica, sans-serif;
}

/*input[type="radio"], input[type="checkbox"] {
    margin: 0 0 0 !important;
    margin-right: 5px !important;
    line-height: 23px !important;
    border: 0 !important;
}*/

.btn {
    background-image: none !important;
    font-family: "Segoe UI", Arial, Helvetica, sans-serif;
    font-size: 13px !important;
}

    .btn.btn-mini {
        font-size: 11px !important;
    }

body {
    font-size: 13px;
    line-height: 23px;
    color: #666;
    background: #111;
    padding-top: 45px;
    -webkit-font-smoothing: antialiased;
}

    body .container {
        width: 97%;
        padding-left: 1.5%;
        padding-right: 1.5%;
    }

h1, h2, h3, h4, h5, h6 {
    padding: 2px 0;
    margin: 2px 0;
    color: #777;
    font-weight: 400;
}

h2 {
    font-size: 30px;
    line-height: 40px;
}

h3 {
    font-size: 23px;
    line-height: 33px;
}

h4 {
    font-size: 20px;
    line-height: 30px;
}

h5 {
    font-size: 18px;
    line-height: 28px;
}

h6 {
    font-size: 15px;
    line-height: 25px;
}

p {
    padding: 1px 0 !important;
    margin: 1px 0 !important;
}

a {
    color: #333;
    text-decoration: none !important;
}

    a:hover {
        color: #888;
        text-decoration: none;
    }

    a:hover, a:focus, a:active {
        outline: 0;
    }

.bold {
    font-weight: 600;
}

hr {
    margin: 8px 0 8px 0 !important;
    padding: 0 !important;
    border-top: 0;
    border-bottom: 1px solid #ddd !important;
    height: 0;
}

:focus {
    outline: none;
}

::-moz-focus-inner {
    border: 0;
}

.well {
    padding: 10px 15px;
}

.small-well {

    padding: 5px 5px 5px 5px !important;
}
a.btn {
    font-size: 16px !important;
}

.label {
    font-weight: 400;
    padding: 3px 6px !important;
    font-size: 16px;
}

.control-label{

    font-weight: 400 !important;
    font-size: 14px;
}
/* ... */

